fixed alignment for medium screen & padding

--- a/DRAFT ONLINE PORTFOLIO/style.css
+++ b/DRAFT ONLINE PORTFOLIO/style.css
@@ -103,7 +103,7 @@ nav ul li a:hover::after{
 /*-----About page below-------*/
 #about{
     padding: 80px 0;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
     /*color:*/
 }
 
@@ -368,7 +368,7 @@ flex-basis: 35%;
 
 }
 
-.social-icons a {
+.social-icons a  {
     text-decoration: none;
     font-size: 30px;
     margin-right: 15px;
@@ -591,27 +591,28 @@ nav .fa{
 }
 
 /*-----css for medium screen------*/
-@media screen and (min-width: 768px) and (max-width: 1024px){
+@media screen and (min-width: 768px) /*and (max-width: 1024px)*/{
     #about{
         padding: 80px 0;
-        margin-bottom: 10%;
+        margin: 5px;
         /*color:*/
     }
     
     .row{
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
+        flex-direction: row;
+        /*justify-content: space-between;
+        flex-wrap: wrap;*/
     
     }
     .about-col-1{
         flex-basis: 35%;
+        
     }
     
     .about-col-1 img{
         /*width: 100%;*/
         border-radius: 15px;
-        margin-left: 150px;
+        margin-left: 50px;
     
     }
     
@@ -621,7 +622,7 @@ nav .fa{
     }
     
     .about-col-2 p{
-        font-size: 20px;
+        font-size: 16px;
     }
     
     .about-col-2 li{
@@ -631,10 +632,14 @@ nav .fa{
     .about-col-2 h1 {
         margin-bottom: 35px;
     }
-    
-    
+
     .sub-title{
-        font-size: 70px;
+        font-size: 50px;
+    }
+    
+    
+    .about-col-2 .sub-title{
+        font-size: 50px;
         font-weight: 600;
         color: black;
     }
